# julia4d

./: .gitignore  CMakeLists.txt  gojulia4d
inc/: camera.h  gldatashells.h  glwindow.h  mat4.h  multipasswindow.h  rayMarcher.h  vec4.h
old/: gimbal.cpp  gimbal.h  juliasetDE.glsl.c  oldmain.cpp  simpleCpx.cpp  simpleCpx.h  vector4d.cpp  vector4d.h
shaders/: _vert.glsl  julia2dslice_frag.glsl  julia_frag.glsl  main_frag.glsl  mandelbrot_frag.glsl  mpTest_frag.glsl
src/: camera.cpp  gldatashells.cpp  glwindow.cpp  main.cpp  mat4.cpp  multipasswindow.cpp  rayMarcher.cpp  vec4.cpp
